--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,11 @@ button:focus {
   padding-bottom: 15px !important;
 }
 
+@media (min-width: 769px) {
+  .mat-mdc-dialog-content {
+    max-height: 80vh !important;
+  }
+}
 .mat-mdc-dialog-container {
   padding-top: 8px !important;
 }
@@ -138,9 +143,6 @@ button:focus {
     .mat-elevation-z8 {
       max-height: 630px;
       width: 100%;
-      &.table-wz-advanced {
-        width: calc(100% - 230px) !important;
-      }
     }
   }
   
@@ -150,9 +152,6 @@ button:focus {
     .mat-elevation-z8 {
       max-height: 100%;
       width: 100%;
-      // &.table-wz-advanced {
-      //   filter: brightness(0.4);
-      // }
       .mat-mdc-header-row {
         display: none;
       }
@@ -205,7 +204,6 @@ button:focus {
 @media(min-width: 960px) {
   .container-border {
     border-radius: 10px;
-    // box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     border: 0.5px solid #ccc;
   }
 }
@@ -279,52 +277,6 @@ mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary {
 
 .mdc-data-table__cell, .mdc-data-table__header-cell {
   padding: 0 16px 0 14px !important;
-}
-
-@media (min-width: 769px) {
-  .advanced-filter {
-    border: 1px solid #dcd4d4;
-    border-radius: 10px;
-    margin-inline-start: 8px;
-    width: 222px;
-    height: 630px;
-    .header {
-      background-color: #f1f1f1;
-      padding: 17px 10px;
-      border-radius: 10px 10px 0 0;
-    }
-    .advanced-body {
-      height: 490px;
-      overflow-y: scroll;
-    }
-  }
-}
-
-@media (max-width: 769px) {
-  .advanced-filter {
-    z-index: 1511111111 !important;
-    width: 100%;
-    min-width: 100%;
-    background-color: white;
-    height: 100vh;
-    .header {
-      background-color: #f1f1f1;
-      padding-inline-start: 16px;
-    }
-    .filter-form {
-      height: calc(100% - 185px);
-      max-height: calc(100% - 185px) !important;
-      overflow-y: scroll;
-    }
-    .advanced-body {
-      height: 100%;
-      overflow-y: scroll;
-    }
-    .filter-footer {
-      position: fixed;
-      bottom: 8px;
-    }
-  }
 }
 
 .mobile-fab-button {
