--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -14,14 +14,17 @@
                 <div>
                   <div class="d-flex">
                     <div [ngSwitch]="element.bookingStatus" class="mb-2">
-                      <div *ngSwitchCase="2">
+                      <div *ngSwitchCase="model.bookingStatus.confirmed">
                         <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
                       </div>
-                      <div *ngSwitchCase="3">
+                      <div *ngSwitchCase="model.bookingStatus.duplicated">
                         <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
                       </div>
-                      <div *ngSwitchCase="4">
+                      <div *ngSwitchCase="model.bookingStatus.canceled">
                         <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                      </div>
+                      <div *ngSwitchCase="model.bookingStatus.waiting">
+                        <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
                       </div>
                       <div *ngSwitchDefault>
                         <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
@@ -148,14 +151,17 @@
             </th>
             <td mat-cell *matCellDef="let element" class="col-1">
               <ng-container [ngSwitch]="element.bookingStatus">
-                <div *ngSwitchCase="2">
+                <div *ngSwitchCase="model.bookingStatus.confirmed">
                   <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
                 </div>
-                <div *ngSwitchCase="3">
+                <div *ngSwitchCase="model.bookingStatus.duplicated">
                   <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
                 </div>
-                <div *ngSwitchCase="4">
+                <div *ngSwitchCase="model.bookingStatus.canceled">
                   <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                </div>
+                <div *ngSwitchCase="model.bookingStatus.waiting">
+                  <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
                 </div>
                 <div *ngSwitchDefault>
                   <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
