--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -13,22 +13,20 @@
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
                                     <div [ngSwitch]="element.bookingStatus" class="mb-2">
-                                        <div *ngSwitchCase="2">
-                                            <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}
-                                            </div>
+                                        <div *ngSwitchCase="model.bookingStatus.confirmed">
+                                            <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
                                         </div>
-                                        <div *ngSwitchCase="3">
-                                            <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate
-                                                }}
-                                            </div>
+                                        <div *ngSwitchCase="model.bookingStatus.duplicated">
+                                            <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
                                         </div>
-                                        <div *ngSwitchCase="4">
-                                            <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
-                                            </div>
+                                        <div *ngSwitchCase="model.bookingStatus.canceled">
+                                            <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                                        </div>
+                                        <div *ngSwitchCase="model.bookingStatus.waiting">
+                                            <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
                                         </div>
                                         <div *ngSwitchDefault>
-                                            <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}
-                                            </div>
+                                            <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
                                         </div>
                                     </div>
                                     <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
@@ -308,20 +306,21 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <ng-container [ngSwitch]="element.bookingStatus">
-                                <div *ngSwitchCase="2">
+                                <div *ngSwitchCase="model.bookingStatus.confirmed">
                                     <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                                </div>
-                                <div *ngSwitchCase="3">
-                                    <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}
-                                    </div>
-                                </div>
-                                <div *ngSwitchCase="4">
-                                    <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
-                                    </div>
-                                </div>
-                                <div *ngSwitchDefault>
+                                  </div>
+                                  <div *ngSwitchCase="model.bookingStatus.duplicated">
+                                    <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+                                  </div>
+                                  <div *ngSwitchCase="model.bookingStatus.canceled">
+                                    <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                                  </div>
+                                  <div *ngSwitchCase="model.bookingStatus.waiting">
+                                    <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
+                                  </div>
+                                  <div *ngSwitchDefault>
                                     <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                                </div>
+                                  </div>
                             </ng-container>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
