--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,22 +17,23 @@
     </ng-container>
 </ng-container>
 
-<div *ngIf="showForm" class="container h-100 mt-3 px-0">
+<div *ngIf="showForm" class="container h-100 mt-lg-3 mt-0 px-0">
     <div class="d-flex justify-content-center">
         <div class="col-md-9 col-12 px-0 container-border">
             <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
                 <mat-tab [label]="'home.individualBooking' | translate">
                     <ng-container *ngIf="selectedTabIndex < 1">
                         <ng-container *ngIf="(settings | async) as setting">
-                            <div *ngIf="isReservationEnd" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage"></div>
+                            <div *ngIf="isWaitingNow" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage"></div>
                         </ng-container>
-                        <app-reservation [type]="bookingType.individual" (showForm)="showTicketForm($event)"></app-reservation>
+                        <app-reservation [type]="bookingType.individual" (showForm)="showTicketForm($event)" 
+                            [availableTicketCount]="availableTicketCount" [existingTicketCount]="existingTicketCount"></app-reservation>
                     </ng-container>
                 </mat-tab>
                 <mat-tab [label]="'home.groupBooking' | translate">
                     <ng-container *ngIf="selectedTabIndex > 0">
                         <ng-container *ngIf="(settings | async) as setting">
-                            <div *ngIf="isReservationEnd" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage"></div>
+                            <div *ngIf="isWaitingNow" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage"></div>
                         </ng-container>
                         <div class="alert alert-info">
                             <div>
@@ -45,7 +46,8 @@
                                 {{'common.maximumPersons' | translate}}
                             </div>
                         </div>
-                        <app-reservation [type]="bookingType.group" (showForm)="showTicketForm($event)"></app-reservation>
+                        <app-reservation [type]="bookingType.group" (showForm)="showTicketForm($event)" 
+                            [availableTicketCount]="availableTicketCount" [existingTicketCount]="existingTicketCount"></app-reservation>
                     </ng-container>
                 </mat-tab>
             </mat-tab-group>
