--- a/src/app/admin/rooms/rooms.component.html
+++ b/src/app/admin/rooms/rooms.component.html
@@ -1,60 +1,117 @@
-<div class="container-fluid table-container">
-    <div class="row mx-0 my-3">
-      <button color="primary" mat-raised-button (click)="add()">
-        {{'room.add' | translate}}
-      </button>
-    </div>
-  
-    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="building">
-          <th mat-header-cell *matHeaderCellDef>{{'room.building' | translate}}</th>
-          <td mat-cell *matCellDef="let element">{{element.building}}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef>{{'room.floor' | translate}}</th>
-          <td mat-cell *matCellDef="let element">{{ element.floor }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef>{{'room.name' | translate}}</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-        </ng-container>
+<div *ngIf="showLoading" class="loading-container d-flex justify-content-center align-items-center">
+  <div class="lds-hourglass"></div>
+</div>
 
-        <ng-container matColumnDef="time">
-          <th mat-header-cell *matHeaderCellDef>{{'room.type' | translate}}</th>
-          <td mat-cell *matCellDef="let element">{{ element.type }}</td>
-        </ng-container>
+<div *ngIf="showErrorMessage" class="alert alert-danger">
+  <div>حدث خطا أثناء قراءة ملف الأكسيل. برجاء مراعاة الآتي:</div>
+  <ul>
+    <li>يجب أن يتكون الملف من 4 أعمدة فقط.</li>
+    <li>يجب ألا يتكرر اسم اي عمود.</li>
+    <li>يجب ألا يكون هناك فواصل بين الاربعة أعمدة</li>
+    <li>اسماء الاعمدة بالترتيب كالآتي:</li>
+    <ol>
+      <li>room</li>
+      <li>building</li>
+      <li>floor</li>
+      <li>sizeName</li>
+    </ol>
+  </ul>
+</div>
 
-        <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef>{{'room.rest' | translate}}</th>
-          <td mat-cell *matCellDef="let element">{{element.rest}}</td>
-        </ng-container>
+<div class="container-fluid table-container" [class.px-0]="isMobileView">
+  <div class="w-100" [ngClass]="isMobileView ? 'h-100' : 'mt-2'">
+    <div class="w-100 d-flex h-100">
+      <div *ngIf="dataSource && dataSource.data.length < 1" class="w-100">
+        <app-empty-data></app-empty-data>
+      </div>
+      <div *ngIf="dataSource && dataSource.data.length > 0" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="room">
+            <th mat-header-cell *matHeaderCellDef>الحجرة</th>
+            <td mat-cell *matCellDef="let element">{{element.room}}</td>
+            <td mat-footer-cell *matFooterCellDef>
+              {{'common.total' | translate}}: <b>{{dataSource.data.length}}</b> 
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>  </th>
-          <td mat-cell *matCellDef="let element">
+          <ng-container matColumnDef="building">
+            <th mat-header-cell *matHeaderCellDef>المبني</th>
+            <td mat-cell *matCellDef="let element">{{element.building}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="floor">
+            <th mat-header-cell *matHeaderCellDef>الطابق</th>
+            <td mat-cell *matCellDef="let element">{{element.floor}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="sizeName">
+            <th mat-header-cell *matHeaderCellDef>سعة الغرفة</th>
+            <td mat-cell *matCellDef="let element">{{ element.sizeName }}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="size">
+            <th mat-header-cell *matHeaderCellDef>السعة</th>
+            <td mat-cell *matCellDef="let element">{{ element.size }}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="displayedName">
+            <th mat-header-cell *matHeaderCellDef>اسم الغرفة</th>
+            <td mat-cell *matCellDef="let element">{{ element.displayedName }}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="current">
+            <th mat-header-cell *matHeaderCellDef>الحالي</th>
+            <td mat-cell *matCellDef="let element">{{element.current}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="available">
+            <th mat-header-cell *matHeaderCellDef>المتاح</th>
+            <td mat-cell *matCellDef="let element">{{element.available}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="notUsed">
+            <th mat-header-cell *matHeaderCellDef>الغير مستخدم</th>
+            <td mat-cell *matCellDef="let element">{{element.notUsed}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element">
               <div class="d-flex">
-                  <button mat-icon-button color="primary" (click)="update(element)">
-                      <mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warn" (click)="delete(element)">
-                      <mat-icon>delete</mat-icon>
-                  </button>
+                <button mat-icon-button color="primary" (click)="update(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="delete(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
               </div>
-          </td>
-      </ng-container>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+        </table>
+      </div>
     </div>
   </div>
-  
-  <ng-template #emptyData>
-    <app-empty-data></app-empty-data>
-  </ng-template>
-  
-    
+</div>
+
+<button mat-icon-button color="primary" (click)="input.click()" class="mobile-filter-button">
+  <mat-icon>add</mat-icon>
+</button>
+
+<input type="file" [hidden]="true" #input (change)="readExcelFile($event)">
+
+<ng-template #emptyData>
+  <app-empty-data></app-empty-data>
+</ng-template>
