--- a/src/app/admin/rooms/rooms.component.html
+++ b/src/app/admin/rooms/rooms.component.html
@@ -7,7 +7,7 @@
   <ul>
     <li>يجب أن يتكون الملف من 4 أعمدة فقط.</li>
     <li>يجب ألا يتكرر اسم اي عمود.</li>
-    <li>يجب ألا يكون هناك فواصل بين الاربعة أعمدة</li>
+    <li>.يجب ألا يكون هناك فواصل بين الاربعة أعمدة</li>
     <li>اسماء الاعمدة بالترتيب كالآتي:</li>
     <ol>
       <li>room</li>
