--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -58,23 +58,21 @@
                     {{'validations.requiredField' | translate}}
                 </mat-error>
             </mat-form-field>
-            <div class="d-flex flex-md-row flex-column pb-3 px-md-2 px-0">
-                <div class="col-md-6 col-12 px-0">
-                    <label>{{'common.gender' | translate}}:</label>
-                    <mat-radio-group formControlName="gender" class="d-flex">
-                        <mat-radio-button [value]="model.gender.male" color="primary">{{'common.male' | translate}}</mat-radio-button>
-                        <mat-radio-button [value]="model.gender.female" color="primary">{{'common.female' | translate}}</mat-radio-button>
-                    </mat-radio-group>
-                </div>
-                <div class="col-md-6 col-12 px-0">
-                    <label>{{'common.socialStatus' | translate}}:</label>
-                    <mat-radio-group formControlName="socialStatus" class="d-flex">
-                        <mat-radio-button [value]="model.socialStatus.single" color="primary">{{'common.single' | translate}}</mat-radio-button>
-                        <mat-radio-button [value]="model.socialStatus.married" color="primary">{{'common.married' | translate}}</mat-radio-button>
-                        <mat-radio-button [value]="model.socialStatus.widower" color="primary">{{'common.widower' | translate}}</mat-radio-button>
-                    </mat-radio-group>
-                </div>
-            </div>
+            <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
+                <mat-label>{{'common.gender' | translate}}</mat-label>
+                <mat-select formControlName="gender">
+                    <mat-option [value]="model.gender.male">{{'common.male' | translate}}</mat-option>
+                    <mat-option [value]="model.gender.female">{{'common.female' | translate}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
+                <mat-label>{{'common.socialStatus' | translate}}</mat-label>
+                <mat-select formControlName="socialStatus">
+                    <mat-option [value]="model.socialStatus.single">{{'common.single' | translate}}</mat-option>
+                    <mat-option [value]="model.socialStatus.married">{{'common.married' | translate}}</mat-option>
+                    <mat-option [value]="model.socialStatus.widower">{{'common.widower' | translate}}</mat-option>
+                </mat-select>
+            </mat-form-field>
             <mat-form-field class="col-12 px-md-2 px-0">
                 <mat-label>{{'common.notes' | translate}}</mat-label>
                 <textarea type="text" matInput formControlName="userNotes"></textarea>
@@ -181,30 +179,28 @@
                                 {{'validations.requiredField' | translate}}
                             </mat-error>
                         </mat-form-field>
-                        <div class="d-flex flex-md-row flex-column pb-3 px-md-2 px-0">
-                            <div class="col-md-6 col-12 px-0">
-                                <label>{{'common.gender' | translate}}:</label>
-                                <mat-radio-group formControlName="gender" class="d-flex">
-                                    <mat-radio-button [value]="model.gender.male" color="primary">{{'common.male' | translate}}</mat-radio-button>
-                                    <mat-radio-button [value]="model.gender.female" color="primary">{{'common.female' | translate}}</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                            <div *ngIf="!isChild(i)" class="col-md-6 col-12 px-0">
-                                <label>{{'common.socialStatus' | translate}}:</label>
-                                <mat-radio-group formControlName="socialStatus" class="d-flex">
-                                    <mat-radio-button [value]="model.socialStatus.single" color="primary">{{'common.single' | translate}}</mat-radio-button>
-                                    <mat-radio-button [value]="model.socialStatus.married" color="primary">{{'common.married' | translate}}</mat-radio-button>
-                                    <mat-radio-button [value]="model.socialStatus.widower" color="primary">{{'common.widower' | translate}}</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                            <div *ngIf="isChild(i)" class="col-md-6 col-12 px-0">
-                                <label>{{'common.needChildBed' | translate}}</label>
-                                <mat-radio-group formControlName="needsSeparateBed" class="d-flex">
-                                    <mat-radio-button [value]="true" color="primary">{{'common.yes' | translate}}</mat-radio-button>
-                                    <mat-radio-button [value]="false" color="primary">{{'common.no' | translate}}</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                        </div>
+                        <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
+                            <mat-label>{{'common.gender' | translate}}</mat-label>
+                            <mat-select formControlName="gender">
+                                <mat-option [value]="model.gender.male">{{'common.male' | translate}}</mat-option>
+                                <mat-option [value]="model.gender.female">{{'common.female' | translate}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <mat-form-field *ngIf="!isChild(i)" class="col-md-6 col-12 px-md-2 px-0">
+                            <mat-label>{{'common.socialStatus' | translate}}</mat-label>
+                            <mat-select formControlName="socialStatus">
+                                <mat-option [value]="model.socialStatus.single">{{'common.single' | translate}}</mat-option>
+                                <mat-option [value]="model.socialStatus.married">{{'common.married' | translate}}</mat-option>
+                                <mat-option [value]="model.socialStatus.widower">{{'common.widower' | translate}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <mat-form-field *ngIf="isChild(i)" class="col-md-6 col-12 px-md-2 px-0">
+                            <mat-label>{{'common.needChildBed' | translate}}</mat-label>
+                            <mat-select formControlName="needsSeparateBed">
+                                <mat-option [value]="true">{{'common.yes' | translate}}</mat-option>
+                                <mat-option [value]="false">{{'common.no' | translate}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
                         <mat-form-field class="col-12 px-md-2 px-0">
                             <mat-label>{{'common.notes' | translate}}</mat-label>
                             <textarea type="text" matInput formControlName="userNotes"></textarea>
