--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -71,8 +71,9 @@
                                             </div>
                                         </ng-container>
                                     </div>
-                                    <div><b>{{'common.transportationName' | translate}}</b> {{ element.transportationName }} </div>
-                                    <div><b>{{'common.age' | translate}}</b> {{ element.age }} </div>
+                                    <div><b>{{'common.transportationName' | translate}}</b>: {{ element.transportationName }} </div>
+                                    <div><b>{{'menu.address' | translate}}</b>: {{ element.addressName }} </div>
+                                    <div><b>{{'common.age' | translate}}</b>: {{ element.age }} </div>
                                     <div><b>{{'common.birthDate' | translate}}:</b> {{element.birthDate.toMillis() | date}}</div>
                                     <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis() | date:'medium'}}</div>
                                     <div class="d-flex">
@@ -166,6 +167,12 @@
                     <ng-container matColumnDef="transportation">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.transportationName' | translate}}</th>
                         <td mat-cell *matCellDef="let element">{{ element.transportationName }}</td>
+                        <td mat-footer-cell *matFooterCellDef></td>
+                    </ng-container>
+                    
+                    <ng-container matColumnDef="address">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'menu.address' | translate}}</th>
+                        <td mat-cell *matCellDef="let element">{{ element.addressName }}</td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
         
