--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -170,7 +170,7 @@
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
                     
-                    <ng-container matColumnDef="address">
+                    <ng-container matColumnDef="addressName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'menu.address' | translate}}</th>
                         <td mat-cell *matCellDef="let element">{{ element.addressName }}</td>
                         <td mat-footer-cell *matFooterCellDef></td>
