--- a/src/app/admin/rooms/rooms.component.html
+++ b/src/app/admin/rooms/rooms.component.html
@@ -2,6 +2,10 @@
   <div class="lds-hourglass"></div>
 </div>
 
+<!-- <div *ngIf="model.noFileSelected" class="alert alert-warning">
+  لم يتم إختيار اي ملف
+</div> -->
+
 <div *ngIf="model.showErrorMessage" class="alert alert-danger">
   <div>حدث خطا أثناء قراءة ملف الأكسيل. برجاء مراعاة الآتي:</div>
   <ul>
@@ -63,9 +67,9 @@
             <td mat-footer-cell *matFooterCellDef class="px-0">
               <div class="d-flex justify-content-between align-items-center">
                 <div class="pr-3">{{'common.total' | translate}}: <b>{{model.dataSource.data.length}}</b></div>
-                  <!-- <button mat-icon-button color="primary" class="d-flex justify-content-center align-items-center" (click)="openExportModal()">
-                    <i class="fa-solid fa-download font-size-18"></i>
-                  </button> -->
+                <button mat-icon-button color="warn" (click)="removeAll()">
+                  <mat-icon>clear</mat-icon>
+                </button>
               </div>
           </td>
           </ng-container>
@@ -130,7 +134,10 @@
             <th mat-header-cell *matHeaderCellDef>
               <button *ngIf="model.isDataLocal" mat-icon-button color="primary" (click)="uploadRooms()">
                 <mat-icon>cloud_upload</mat-icon>
-            </button>
+              </button>
+              <button mat-icon-button color="warn" (click)="removeAll()">
+                <mat-icon>clear</mat-icon>
+              </button>
             </th>
             <td mat-cell *matCellDef="let element">
               <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
@@ -160,6 +167,10 @@
 <button mat-icon-button color="primary" (click)="input.click()" class="mobile-filter-button">
   <mat-icon>add</mat-icon>
 </button>
+
+<!-- <button *ngIf="model.isMobileView" mat-mini-fab color="primary" (click)="input.click()" class="mobile-fab-button">
+  <mat-icon>add</mat-icon>
+</button> -->
 
 <input type="file" [hidden]="true" #input (change)="readExcelFile($event)">
 
